  time. See ganeti(7), section "Options", for details.
- The monitoring daemon has now variable sleep times for the data
  collectors. This currently means that the granularity of cpu-avg-load
  can be configured.

New dependencies
~~~~~~~~~~~~~~~~

- The monitoring daemon uses the PSQueue library. Be sure to install it
  if you use Mond.


Version 2.12.0
--------------

*(Released Fri, 10 Oct 2014)*

Incompatible/important changes
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

- Ganeti is now distributed under the 2-clause BSD license.
  See the COPYING file.
- Do not use debug mode in production. Certain daemons will issue warnings
  when launched in debug mode. Some debug logging violates some of the new
  invariants in the system (see "New features"). The logging has been kept as
  it aids diagnostics and development.

New features
~~~~~~~~~~~~

- OS install script parameters now come in public, private and secret
  varieties:

  - Public parameters are like all other parameters in Ganeti.
  - Ganeti will not log private and secret parameters, *unless* it is running
    in debug mode.
  - Ganeti will not save secret parameters to configuration. Secret parameters
    must be supplied every time you install, or reinstall, an instance.
  - Attempting to override public parameters with private or secret parameters
    results in an error. Similarly, you may not use secret parameters to
    override private parameters.

- The move-instance tool can now attempt to allocate an instance by using
  opportunistic locking when an iallocator is used.
- The build system creates sample systemd unit files, available under
  doc/examples/systemd. These unit files allow systemd to natively
  manage and supervise all Ganeti processes.
- Different types of compression can be applied during instance moves, including
  user-specified ones.
- Ganeti jobs now run as separate processes. The jobs are coordinated by
  a new daemon "WConfd" that manages cluster's configuration and locks