@@ -349,10 +349,8 @@ GENERATED_FILES = \
 clean-local:
 	rm -rf tools/shebang
 
-HS_GENERATED_FILES = $(HS_PROGS) src/hluxid src/ganeti-luxid
-if ENABLE_CONFD
-HS_GENERATED_FILES += src/hconfd src/ganeti-confd
-endif
+HS_GENERATED_FILES = $(HS_PROGS) src/hluxid src/ganeti-luxid \
+	src/hconfd src/ganeti-confd
 if ENABLE_MOND
 HS_GENERATED_FILES += src/ganeti-mond
 endif
@@ -714,12 +712,10 @@ endif
 HS_COMPILE_PROGS = \
 	src/ganeti-kvmd \
 	src/ganeti-wconfd \
+	src/hconfd \
 	src/hluxid \
 	src/hs2py \
 	src/rpc-test
-if ENABLE_CONFD
-HS_COMPILE_PROGS += src/hconfd
-endif
 if ENABLE_MOND
 HS_COMPILE_PROGS += src/ganeti-mond
 endif
@@ -1325,6 +1321,7 @@ nodist_sbin_SCRIPTS = \
 	daemons/ganeti-cleaner \
   src/ganeti-kvmd \
   src/ganeti-luxid \
+  src/ganeti-confd \
   src/ganeti-wconfd
 
 src/ganeti-luxid: src/hluxid
@@ -1335,12 +1332,8 @@ all_sbin_scripts = \
 	$(patsubst tools/%,%,$(patsubst daemons/%,%,$(patsubst scripts/%,%,\
 	$(patsubst src/%,%,$(dist_sbin_SCRIPTS) $(nodist_sbin_SCRIPTS)))))
 
-if ENABLE_CONFD
 src/ganeti-confd: src/hconfd
 	cp -f $< $@
-
-nodist_sbin_SCRIPTS += src/ganeti-confd
-endif
 
 if ENABLE_MOND
 nodist_sbin_SCRIPTS += src/ganeti-mond
@@ -2207,7 +2200,6 @@ src/AutoConf.hs: Makefile src/AutoConf.hs.in $(PRINT_PY_CONSTANTS) \
 	    -DMOND_GROUP="$(MOND_GROUP)" \
 	    -DDISK_SEPARATOR="$(DISK_SEPARATOR)" \
 	    -DQEMUIMG_PATH="$(QEMUIMG_PATH)" \
-	    -DENABLE_CONFD="$(ENABLE_CONFD)" \
 	    -DXEN_CMD="$(XEN_CMD)" \
 	    -DENABLE_RESTRICTED_COMMANDS="$(ENABLE_RESTRICTED_COMMANDS)" \
 	    -DENABLE_METADATA="$(ENABLE_METADATA)" \
@@ -2301,7 +2293,6 @@ $(REPLACE_VARS_SED): $(SHELL_ENV_INIT) Makefile stamp-directories
 	  echo 's#@''GNTMASTERDGROUP@#$(MASTERD_GROUP)#g'; \
 	  echo 's#@''GNTMONDGROUP@#$(MOND_GROUP)#g'; \
 	  echo 's#@''GNTDAEMONSGROUP@#$(DAEMONS_GROUP)#g'; \
-	  echo 's#@''CUSTOM_ENABLE_CONFD@#$(ENABLE_CONFD)#g'; \
 	  echo 's#@''CUSTOM_ENABLE_MOND@#$(ENABLE_MOND)#g'; \
 	  echo 's#@''MODULES@#$(strip $(lint_python_code))#g'; \
 	  echo 's#@''XEN_CONFIG_DIR@#$(XEN_CONFIG_DIR)#g'; \
