@@ -37,21 +37,12 @@ err() {
   exit 1
 }
 
-if ! grep -q '^ENABLE_CONFD = ' lib/_constants.py; then
-  err "Please update $0, confd enable feature is missing"
-fi
-
 if ! grep -q '^ENABLE_MOND = ' lib/_constants.py; then
   err "Please update $0, mond enable feature is missing"
 fi
 
-DAEMONS_LIST="noded wconfd rapi luxid kvmd"
-STOPDAEMONS_LIST="kvmd luxid rapi wconfd noded"
-
-if grep -q '^ENABLE_CONFD = True' lib/_constants.py; then
-  DAEMONS_LIST="$DAEMONS_LIST confd"
-  STOPDAEMONS_LIST="confd $STOPDAEMONS_LIST"
-fi
+DAEMONS_LIST="noded confd wconfd rapi luxid kvmd"
+STOPDAEMONS_LIST="kvmd luxid rapi wconfd confd noded"
 
 if grep -q '^ENABLE_MOND = True' lib/_constants.py; then
   DAEMONS_LIST="$DAEMONS_LIST mond"
